--- a/html/features.html
+++ b/html/features.html
@@ -53,93 +53,157 @@
               </ul>
             </div>
           </li>
-          <li class="features-item">
-            <a class="link" href="">Широкоформатная печать</a>
-            <div class="features-list">
-              <ul class="list">
-                <li><a class="link" href="">Печать банеров</a></li>
-                <li><a class="link" href="">Печать на пленке</a></li>
-                <li><a class="link" href="">Фотообои</a></li>
-                <li><a class="link" href="">Печать постеров</a></li>
-                <li><a class="link" href="">Печать на холсте</a></li>
+          <li class="features__item flex-list">
+            <div class="flex-item">
+              <div class="features__box">
+                <svg class="icon" width="55" height="55">
+                  <use href="../images/sprite.svg#icon-printer"></use>
+                </svg>
+            <a class="link features__label" href="">Широкоформатная печать</a>
+          </div>
+          </div>
+          <div class="flex-item">
+            <ul class="list flex-list">
+                <li class="flex-item"><a class="link" href="">Печать банеров</a></li>
+                <li class="flex-item"><a class="link" href="">Печать постеров</a></li>
+                <li class="flex-item"><a class="link" href="">Печать на пленке</a></li>
+                <li class="flex-item"><a class="link" href="">Печать на холсте</a></li>
+                <li class="flex-item"><a class="link" href="">Фотообои</a></li>
               </ul>
             </div>
           </li>
-          <li class="features-item">
-            <a class="link" href="./polygraphy.html">Рекламная полиграфия</a>
-            <div class="features-list">
-              <ul class="list">
-                <li><a class="link" href="">Пластиковые карты</a></li>
-                <li><a class="link" href="">Наклейки и стикеры</a></li>
-                <li><a class="link" href="">Визитные карты</a></li>
-                <li><a class="link" href="">Буклеты и лифлеты</a></li>
-                <li><a class="link" href="">POS материалы</a></li>
-                <li><a class="link" href="./catalogs.html">Каталоги и журналы</a></li>
-                <li><a class="link" href="./flyers.html">Листовки и флаеры</a></li>
-                <li><a class="link" href="">Блокноты</a></li>
-                <li><a class="link" href="">Ежедневники</a></li>
-                <li><a class="link" href="">Бирки</a></li>
-                <li><a class="link" href="">Плакаты и постеры</a></li>
-                <li><a class="link" href="">Конверты</a></li>
-                <li><a class="link" href="">Пакеты</a></li>
-                <li><a class="link" href="">Бланки</a></li>
-                <li><a class="link" href="./calendars.html">Календари</a></li>
-                <li><a class="link" href="">Упаковка</a></li>
-                <li><a class="link" href="">Брошюры</a></li>
-                <li><a class="link" href="">Открытки</a></li>
-                <li><a class="link" href="">Папки</a></li>
+          <li class="features__item flex-list">
+            <div class="flex-item">
+              <div class="features__box">
+                <svg class="icon" width="55" height="55">
+                  <use href="../images/sprite.svg#icon-copy"></use>
+                </svg>
+            <a class="link features__label" href="./polygraphy.html">Рекламная полиграфия</a>
+            </div>
+            </div>
+            <div class="flex-item">
+              <ul class="list flex-list">
+                <li class="flex-item"><a class="link" href="">Пластиковые карты</a></li>
+                <li class="flex-item"><a class="link" href="">Плакаты и постеры</a></li>
+                <li class="flex-item"><a class="link" href="">Наклейки и стикеры</a></li>
+                <li class="flex-item"><a class="link" href="">Конверты</a></li>
+                <li class="flex-item"><a class="link" href="">Визитные карты</a></li>
+                <li class="flex-item"><a class="link" href="">Пакеты</a></li>
+                <li class="flex-item"><a class="link" href="">Буклеты и лифлеты</a></li>
+                <li class="flex-item"><a class="link" href="">Бланки</a></li>
+                <li class="flex-item"><a class="link" href="">POS материалы</a></li>
+                <li class="flex-item"><a class="link" href="./calendars.html">Календари</a></li>
+                <li class="flex-item"><a class="link" href="./catalogs.html">Каталоги и журналы</a></li>
+                <li class="flex-item"><a class="link" href="">Упаковка</a></li>
+                <li class="flex-item"><a class="link" href="./flyers.html">Листовки и флаеры</a></li>
+                <li class="flex-item"><a class="link" href="">Брошюры</a></li>
+                <li class="flex-item"><a class="link" href="">Блокноты</a></li>
+                <li class="flex-item"><a class="link" href="">Открытки</a></li>
+                <li class="flex-item"><a class="link" href="">Ежедневники</a></li>
+                <li class="flex-item"><a class="link" href="">Папки</a></li>
+                <li class="flex-item"><a class="link" href="">Бирки</a></li>
               </ul>
             </div>
           </li>
-          <li class="features-item">
-            <a class="link" href="">Сувенирная продукция</a>
-            <div class="features-list">
-              <ul class="list">
-                <li><a class="link" href="">Праздничные сувениры</a></li>
-                <li><a class="link" href="">Подарочные наборы</a></li>
-                <li><a class="link" href="">Флажки и флаги</a></li>
-                <li><a class="link" href="">Брелоки</a></li>
-                <li><a class="link" href="">Ручки</a></li>
-                <li><a class="link" href="">Кружки</a></li>
-                <li><a class="link" href="">Интерьерные сувениры</a></li>
-                <li><a class="link" href="">Значки и бейджи</a></li>
-                <li><a class="link" href="">Чехлы</a></li>
-                <li><a class="link" href="">Флешки</a></li>
-                <li><a class="link" href="">Награды</a></li>
-                <li><a class="link" href="">Магниты</a></li>
+          <li class="features__item flex-list">
+            <div class="flex-item">
+              <div class="features__box">
+                <svg class="icon" width="55" height="55">
+                  <use href="../images/sprite.svg#icon-beer"></use>
+                </svg>
+            <a class="link features__label" href="">Сувенирная продукция</a>
+            </div>
+            </div>
+            <div class="flex-item">
+              <ul class="list flex-list">
+                <li class="flex-item"><a class="link" href="">Праздничные сувениры</a></li>
+                <li class="flex-item"><a class="link" href="">Интерьерные сувениры</a></li>
+                <li class="flex-item"><a class="link" href="">Подарочные наборы</a></li>
+                <li class="flex-item"><a class="link" href="">Значки и бейджи</a></li>
+                <li class="flex-item"><a class="link" href="">Флажки и флаги</a></li>
+                <li class="flex-item"><a class="link" href="">Чехлы</a></li>
+                <li class="flex-item"><a class="link" href="">Брелоки</a></li>
+                <li class="flex-item"><a class="link" href="">Флешки</a></li>
+                <li class="flex-item"><a class="link" href="">Ручки</a></li>
+                <li class="flex-item"><a class="link" href="">Награды</a></li>
+                <li class="flex-item"><a class="link" href="">Кружки</a></li>
+                <li class="flex-item"><a class="link" href="">Магниты</a></li>
               </ul>
             </div>
           </li>
-          <li class="features-item">
-            <a class="link" href="">Внутрення реклама</a>
-            <div class="features-list">
-              <ul class="list">
-                <li><a class="link" href="">Стройки ресепшн</a></li>
-                <li><a class="link" href="">Таблички и навигация</a></li>
-                <li><a class="link" href="">Оформление витрин</a></li>
-                <li><a class="link" href="">Стенды</a></li>
-                <li><a class="link" href="">Выставочное оборудование</a></li>
-                <li><a class="link" href="">Праздничное оформление</a></li>
-                <li><a class="link" href="">Световые панели</a></li>
+          <li class="features__item flex-list">
+            <div class="flex-item">
+              <div class="features__box">
+                <svg class="icon" width="55" height="55">
+                  <use href="../images/sprite.svg#icon-chalkboard"></use>
+                </svg>
+            <a class="link features__label" href="">Внутрення реклама</a>
+            </div>
+            </div>
+            <div class="flex-item">
+              <ul class="list flex-list">
+                <li class="flex-item" class="flex-item"><a class="link" href="">Стройки ресепшн</a></li>
+                <li class="flex-item" class="flex-item"><a class="link" href="">Выставочное оборудование</a></li>
+                <li class="flex-item" class="flex-item"><a class="link" href="">Таблички и навигация</a></li>
+                <li class="flex-item" class="flex-item"><a class="link" href="">Праздничное оформление</a></li>
+                <li class="flex-item" class="flex-item"><a class="link" href="">Оформление витрин</a></li>
+                <li class="flex-item" class="flex-item"><a class="link" href="">Световые панели</a></li>
+                <li class="flex-item" class="flex-item"><a class="link" href="">Стенды</a></li>
               </ul>
             </div>
           </li>
-          <li class="features-item">
-            <a class="link" href="">Гравировка и резка</a>
-            <div class="features-list">
-              <ul class="list">
-                <li><a class="link" href="">Лазерная гравировка</a></li>
-                <li><a class="link" href="">Плоттерная резка</a></li>
-                <li><a class="link" href="">Фрезерная резка и гравировка</a></li>
+          <li class="features__item flex-list">
+            <div class="flex-item">
+              <div class="features__box">
+                <svg class="icon" width="55" height="55">
+                  <use href="../images/sprite.svg#icon-grav"></use>
+                </svg>
+            <a class="link features__label" href="">Гравировка <br> и резка</a>
+            </div>
+            </div>
+            <div class="flex-item">
+              <ul class="list flex-list">
+                <li class="flex-item"><a class="link" href="">Лазерная гравировка</a></li>
+                <li class="flex-item"><a class="link" href="">Фрезерная резка и гравировка</a></li>
+                <li class="flex-item"><a class="link" href="">Плоттерная резка</a></li>
               </ul>
             </div>
           </li>
-          <li class="features-item">
-            <a class="link" href="">Брендирование транспорта</a>
-            <div class="features-list">
-              <ul class="list">
-                <li><a class="link" href="">Лайтбоксы на крышу</a></li>
-                <li><a class="link" href="">Оклейка автомобилей</a></li>
+          <li class="features__item flex-list">
+            <div class="flex-item">
+              <div class="features__box">
+                <svg class="icon" width="55" height="55">
+                  <use href="../images/sprite.svg#icon-t-shirt"></use>
+                </svg>
+                <a class="link features__label" href="">Брендирование одежды</a>
+              </div>
+            </div>
+            <div class="flex-item">
+              <ul class="list flex-list">
+                <li class="flex-item"><a class="link" href="">Корпоративная одежда</a></li>
+                <li class="flex-item"><a class="link" href="">Нашивки и шевроны</a></li>
+                <li class="flex-item"><a class="link" href="">Домашний текстиль</a></li>
+                <li class="flex-item"><a class="link" href="">Сумки и рюкзаки</a></li>
+                <li class="flex-item"><a class="link" href="">Принт на одежде</a></li>
+                <li class="flex-item"><a class="link" href="">Аксессуары</a></li>
+                <li class="flex-item"><a class="link" href="">Промо одежда</a></li>
+                <li class="flex-item"><a class="link" href="">Этикетки</a></li>
+              </ul>
+            </div>
+          </li>
+          <li class="features__item flex-list">
+            <div class="flex-item">
+              <div class="features__box">
+                <svg class="icon" width="55" height="55">
+                  <use href="../images/sprite.svg#icon-bus"></use>
+                </svg>
+            <a class="link features__label" href="">Брендирование транспорта</a>
+            </div>
+            </div>
+            <div class="flex-item">
+              <ul class="list flex-list">
+                <li class="flex-item"><a class="link" href="">Лайтбоксы на крышу</a></li>
+                <li class="flex-item"><a class="link" href="">Оклейка автомобилей</a></li>
               </ul>
             </div>
           </li>
