--- a/html/complex.html
+++ b/html/complex.html
@@ -1,165 +1,272 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Комплексные решения</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.2.0/modern-normalize.min.css">
-  <link rel="stylesheet" href="../css/styles.css">
-</head>
-<body>
-  <header class="header">
-    <div class="container">
-      <div class="content-in-row">
-        <a class="link" href="../index.html"><img src="../images/icons/logo.svg" alt=""></a>
-        <ul class="list nav">
-          <li class="list-item ">
-            <button class="button content-in-row" type="button">
-              <svg class="icon">
-                <use href="./images/sprite.svg#icon-search"></use>
-              </svg>
-              Поиск
-            </button>
-          </li>
-          <li class="list-item"><a class="link upper" href="tel:84964290900">8 496 429 09 00</a></li>
-          <li class="list-item"><button class="button upper bold" type="button">Оставить заявку</button></li>
-        </ul>
-      </div>
-    </div>
-  </header>
-  <main>
-    <section>
-      <h1 class="page-title">Комплексные решения</h1>
-      <p>Для наиболее удачной работы бизнеса мы разработали готовые решения, которые наиболее оптимально подходят для решения
-      именно ваших задач.</p>
-      <section>
-        <h2 class="section-title visually-hidden">Самые популярные решения</h2>
-        <ul class="list">
-          <li>
-            <div>
-              <img src="../images/complex/complex1.jpg" width="570" height="320" alt="">
-            </div>
-            <div>
-              <h3>Для магазинов</h3>
-              <p>Для оформления товарных отделов часто используют различные виды рекламной продукции и POS-материалы, что позволяет
-              произвести грамотную расстановку товарных групп, так чтобы потребитель смог обойти торговое пространство целиком.</p>
-              <a class="link button" href="./stores.html">Подробнее</a>
-              <!-- <button class="button upper details" type="button">Подробнее</button> -->
-            </div>
-          </li>
-          <li>
-            <div>
-              <img src="../images/complex/complex2.jpg" width="570" height="320" alt="">
-            </div>
-            <div>
-              <h3>Для кафе и ресторанов</h3>
-              <p>Визуальное оформление кафе и ресторанов привлекает наибольшее внимание посетителей и делает заведение узнаваемым на фоне
-              многих других точек общественного питания. А уникальный фирменный стиль заставят возвращаться посетителей снова и снова.</p>
-              <a class="link button" href="./restaurants.html">Подробнее</a>
-              <!-- <button class="button upper details" type="button">Подробнее</button> -->
-            </div>
-          </li>
-          <li>
-            <div>
-              <img src="../images/complex/complex3.jpg" width="570" height="320" alt="">
-            </div>
-            <div>
-              <h3>Для АЗС</h3>
-              <p>Огромное значение для успешного ведения дел заправочной станции имеет рекламное оформление АЗС. Сделать заправочную станцию 
-              привлекательной помогут специалисты Promomix. Обладающие профильными знаниями и опытом выполнения работ в данной сфере.</p>
-              <button class="button upper details" type="button">подробнее</button>
-            </div>
-          </li>
-          <li>
-            <div>
-              <img src="../images/complex/complex4.jpg" width="570" height="320" alt="">
-            </div>
-            <div>
-              <h3>Для аптек</h3>
-              <p>Фирменный стиль аптеки начинается с тщательного анализа территории, на которой располагается торговая точка, ближайших
-              конкурентов и самого помещения. На основе полученных данных определяется оптимальный формат, позиционирование и стилистика.</p>
-              <button class="button upper details" type="button">Подробнее</button>
-            </div>
-          </li>
-          <li>
-            <div>
-              <img src="../images/complex/complex5.jpg" width="570" height="320" alt="">
-            </div>
-            <div>
-              <h3>Для салонов красоты</h3>
-              <p>Дизайн салона красоты во многом зависит от его спектра услуг. Уникальная обстановка стала неотъемлемой частью рекламной 
-              компании любого заведения. Одной вывески мало, чтобы завлечь и удержать клиентов, так как на рынке подобных услуг жесткая конкуренция.</p>
-              <button class="button upper details" type="button">Подробнее</button>
-            </div>
-          </li>
-          <li>
-            <div>
-              <img src="../images/complex/complex6.jpg" width="570" height="320" alt="">
-            </div>
-            <div>
-              <h3>Для торговых центров</h3>
-              <p>Творческое, основанное на знании психологии и маркетинга, оформление торговых центров, становится одним из самых важных
-              инструментов графического дизайна. С его помощью торговый центр можно сделать интересным для покупателей.</p>
-              <button class="button upper details" type="button">подробнее</button>
-            </div>
-          </li>
-        </ul>
-
-      </section>
-      
-    </section>
-  </main>
-  <footer class="footer">
-    <div class="footer-dark gray-section">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Комплексные решения</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.2.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="../css/styles.css" />
+  </head>
+  <body>
+    <header class="header">
       <div class="container">
-        <div class="top-footer">
-          <div class="flex-item">
-            <a class="link footer-title" href=""><span class="accent" lang="en">Promomix –</span> рекламное агентство
-              полного
-              цикла</a>
-            <button class="button upper" type="button">Оставить заявку</button>
-          </div>
-          <div class="flex-item">
-            <div class="flex-list">
-              <nav class="flex-item">
-                <ul class="list main-nav">
-                  <li class="item"><a class="link" href="../html/about.html">О компании</a></li>
-                  <li class="item"><a class="link" href="../html/features.html">Услуги</a></li>
-                  <li class="item"><a class="link" href="../html/works.html">Наши работы</a></li>
-                  <li class="item"><a class="link" href="../html/services.html">Сервис</a></li>
-                  <li class="item"><a class="link" href="../html/complex.html">Комплексные решения</a></li>
-                  <li class="item"><a class="link" href="../html/posts.html">Статьи и новости</a></li>
-                  <li class="item"><a class="link" href="../html/contacts.html">Контакты</a></li>
-                </ul>
-              </nav>
-              <div class="flex-item">
-                <p class="invitation">Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
-                <form class="footer-form">
-                  <input class="placeholder" type="email" placeholder="Ваш e-mail">
-                  <button type="submit">
-                    <!-- &#8594; -->
-                    <svg width="20" height="14">
-                      <use href="../images/sprite.svg#icon-arrow"></use>
-                    </svg>
-                  </button>
-                </form>
+        <div class="content-in-row">
+          <a class="link" href="../index.html"
+            ><img src="../images/icons/logo.svg" alt=""
+          /></a>
+          <ul class="list nav">
+            <li class="list-item">
+              <button class="button content-in-row" type="button">
+                <svg class="icon">
+                  <use href="./images/sprite.svg#icon-search"></use>
+                </svg>
+                Поиск
+              </button>
+            </li>
+            <li class="list-item">
+              <a class="link upper" href="tel:84964290900">8 496 429 09 00</a>
+            </li>
+            <li class="list-item">
+              <button class="button upper bold" type="button">
+                Оставить заявку
+              </button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section>
+        <h1 class="page-title">Комплексные решения</h1>
+        <p>
+          Для наиболее удачной работы бизнеса мы разработали готовые решения,
+          которые наиболее оптимально подходят для решения именно ваших задач.
+        </p>
+        <section>
+          <h2 class="section__title visually-hidden">
+            Самые популярные решения
+          </h2>
+          <ul class="list">
+            <li>
+              <div>
+                <img
+                  src="../images/complex/complex1.jpg"
+                  width="570"
+                  height="320"
+                  alt=""
+                />
+              </div>
+              <div>
+                <h3>Для магазинов</h3>
+                <p>
+                  Для оформления товарных отделов часто используют различные
+                  виды рекламной продукции и POS-материалы, что позволяет
+                  произвести грамотную расстановку товарных групп, так чтобы
+                  потребитель смог обойти торговое пространство целиком.
+                </p>
+                <a class="link button" href="./stores.html">Подробнее</a>
+                <!-- <button class="button upper details" type="button">Подробнее</button> -->
+              </div>
+            </li>
+            <li>
+              <div>
+                <img
+                  src="../images/complex/complex2.jpg"
+                  width="570"
+                  height="320"
+                  alt=""
+                />
+              </div>
+              <div>
+                <h3>Для кафе и ресторанов</h3>
+                <p>
+                  Визуальное оформление кафе и ресторанов привлекает наибольшее
+                  внимание посетителей и делает заведение узнаваемым на фоне
+                  многих других точек общественного питания. А уникальный
+                  фирменный стиль заставят возвращаться посетителей снова и
+                  снова.
+                </p>
+                <a class="link button" href="./restaurants.html">Подробнее</a>
+                <!-- <button class="button upper details" type="button">Подробнее</button> -->
+              </div>
+            </li>
+            <li>
+              <div>
+                <img
+                  src="../images/complex/complex3.jpg"
+                  width="570"
+                  height="320"
+                  alt=""
+                />
+              </div>
+              <div>
+                <h3>Для АЗС</h3>
+                <p>
+                  Огромное значение для успешного ведения дел заправочной
+                  станции имеет рекламное оформление АЗС. Сделать заправочную
+                  станцию привлекательной помогут специалисты Promomix.
+                  Обладающие профильными знаниями и опытом выполнения работ в
+                  данной сфере.
+                </p>
+                <button class="button upper details" type="button">
+                  подробнее
+                </button>
+              </div>
+            </li>
+            <li>
+              <div>
+                <img
+                  src="../images/complex/complex4.jpg"
+                  width="570"
+                  height="320"
+                  alt=""
+                />
+              </div>
+              <div>
+                <h3>Для аптек</h3>
+                <p>
+                  Фирменный стиль аптеки начинается с тщательного анализа
+                  территории, на которой располагается торговая точка, ближайших
+                  конкурентов и самого помещения. На основе полученных данных
+                  определяется оптимальный формат, позиционирование и
+                  стилистика.
+                </p>
+                <button class="button upper details" type="button">
+                  Подробнее
+                </button>
+              </div>
+            </li>
+            <li>
+              <div>
+                <img
+                  src="../images/complex/complex5.jpg"
+                  width="570"
+                  height="320"
+                  alt=""
+                />
+              </div>
+              <div>
+                <h3>Для салонов красоты</h3>
+                <p>
+                  Дизайн салона красоты во многом зависит от его спектра услуг.
+                  Уникальная обстановка стала неотъемлемой частью рекламной
+                  компании любого заведения. Одной вывески мало, чтобы завлечь и
+                  удержать клиентов, так как на рынке подобных услуг жесткая
+                  конкуренция.
+                </p>
+                <button class="button upper details" type="button">
+                  Подробнее
+                </button>
+              </div>
+            </li>
+            <li>
+              <div>
+                <img
+                  src="../images/complex/complex6.jpg"
+                  width="570"
+                  height="320"
+                  alt=""
+                />
+              </div>
+              <div>
+                <h3>Для торговых центров</h3>
+                <p>
+                  Творческое, основанное на знании психологии и маркетинга,
+                  оформление торговых центров, становится одним из самых важных
+                  инструментов графического дизайна. С его помощью торговый
+                  центр можно сделать интересным для покупателей.
+                </p>
+                <button class="button upper details" type="button">
+                  подробнее
+                </button>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer-dark section--gray">
+        <div class="container">
+          <div class="top-footer">
+            <div class="grid__item">
+              <a class="link footer-title" href=""
+                ><span class="accent" lang="en">Promomix –</span> рекламное
+                агентство полного цикла</a
+              >
+              <button class="button upper" type="button">
+                Оставить заявку
+              </button>
+            </div>
+            <div class="grid__item">
+              <div class="grid">
+                <nav class="grid__item">
+                  <ul class="list main-nav">
+                    <li class="item">
+                      <a class="link" href="../html/about.html">О компании</a>
+                    </li>
+                    <li class="item">
+                      <a class="link" href="../html/features.html">Услуги</a>
+                    </li>
+                    <li class="item">
+                      <a class="link" href="../html/works.html">Наши работы</a>
+                    </li>
+                    <li class="item">
+                      <a class="link" href="../html/services.html">Сервис</a>
+                    </li>
+                    <li class="item">
+                      <a class="link" href="../html/complex.html"
+                        >Комплексные решения</a
+                      >
+                    </li>
+                    <li class="item">
+                      <a class="link" href="../html/posts.html"
+                        >Статьи и новости</a
+                      >
+                    </li>
+                    <li class="item">
+                      <a class="link" href="../html/contacts.html">Контакты</a>
+                    </li>
+                  </ul>
+                </nav>
+                <div class="grid__item">
+                  <p class="invitation">
+                    Чтобы быть в курсе всех акций и новых событий, подпишитесь
+                    на нашу рассылку.
+                  </p>
+                  <form class="footer-form">
+                    <input
+                      class="placeholder"
+                      type="email"
+                      placeholder="Ваш e-mail"
+                    />
+                    <button type="submit">
+                      <!-- &#8594; -->
+                      <svg width="20" height="14">
+                        <use href="../images/sprite.svg#icon-arrow"></use>
+                      </svg>
+                    </button>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="container">
-      <div class="low-footer">
-        <p>&copy; 2011-2020 Promomix</p>
-        <ul class="list social-list">
-          <li class="social-item"><a class="link" href="">Facebook</a></li>
-          <li class="social-item"><a class="link" href="">Vkontakte</a></li>
-          <li class="social-item"><a class="link" href="">Instagram</a></li>
-        </ul>
+      <div class="container">
+        <div class="low-footer">
+          <p>&copy; 2011-2020 Promomix</p>
+          <ul class="list social-list">
+            <li class="social-item"><a class="link" href="">Facebook</a></li>
+            <li class="social-item"><a class="link" href="">Vkontakte</a></li>
+            <li class="social-item"><a class="link" href="">Instagram</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
