--- a/html/posts.html
+++ b/html/posts.html
@@ -35,14 +35,14 @@
     </section>
     <section>
         <p class="date upper">21. 03. 2020 | Новость</p>
-        <h2 class="section-title">Уникальная услуга «вывеска в аренду»</h2>
+        <h2 class="section__title">Уникальная услуга «вывеска в аренду»</h2>
         <p>У владельца любого малого, но успешно развивающегося бизнеса рано или поздно возникает необходимость в дополнительной
         визуальной рекламе.</p>
         <button class="button upper details" type="button">Подробнее</button>
     </section>
 
     <section class="news">
-      <h2 class="section-title visually-hidden">Самые интересные статьи и новости</h2>
+      <h2 class="section__title visually-hidden">Самые интересные статьи и новости</h2>
       <ul class="list">
         <li>
           <p class="label upper">Новость</p>
@@ -155,7 +155,7 @@
     <section>
       <div class="subscribe">
         <div>
-         <h2 class="section-title">Рассылка</h2>
+         <h2 class="section__title">Рассылка</h2>
         </div>
         <div>
           <p>Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
@@ -167,19 +167,19 @@
       </div>
     </section>
   </main>
-  << class="footer">
-    <div class="footer-dark gray-section">
+  <footer class="footer">
+    <div class="footer-dark section--gray">
       <div class="container">
         <div class="top-footer">
-          <div class="flex-item">
+          <div class="grid__item">
             <a class="link footer-title" href=""><span class="accent" lang="en">Promomix –</span> рекламное агентство
               полного
               цикла</a>
             <button class="button upper" type="button">Оставить заявку</button>
           </div>
-          <div class="flex-item">
-            <div class="flex-list">
-              <nav class="flex-item">
+          <div class="grid__item">
+            <div class="grid">
+              <nav class="grid__item">
                 <ul class="list main-nav">
                   <li class="item"><a class="link" href="../html/about.html">О компании</a></li>
                   <li class="item"><a class="link" href="../html/features.html">Услуги</a></li>
@@ -190,7 +190,7 @@
                   <li class="item"><a class="link" href="../html/contacts.html">Контакты</a></li>
                 </ul>
               </nav>
-              <div class="flex-item">
+              <div class="grid__item">
                 <p class="invitation">Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
                 <form class="footer-form">
                   <input class="placeholder" type="email" placeholder="Ваш e-mail">
@@ -217,6 +217,6 @@
         </ul>
       </div>
     </div>
-  </>
+  </footer>
 </body>
 </html>
