--- a/html/flyers.html
+++ b/html/flyers.html
@@ -1,72 +1,93 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Листовки и флаеры</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.2.0/modern-normalize.min.css">
-  <link rel="stylesheet" href="../css/styles.css">
-</head>
-<body>
-  <header class="header">
-    <div class="container">
-      <div class="content-in-row">
-        <a class="link" href="../index.html"><img src="../images/icons/logo.svg" alt=""></a>
-        <ul class="list nav">
-          <li class="list-item ">
-            <button class="button content-in-row" type="button">
-              <svg class="icon">
-                <use href="./images/sprite.svg#icon-search"></use>
-              </svg>
-              Поиск
-            </button>
-          </li>
-          <li class="list-item"><a class="link upper" href="tel:84964290900">8 496 429 09 00</a></li>
-          <li class="list-item"><button class="button upper bold" type="button">Оставить заявку</button></li>
-        </ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Листовки и флаеры</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.2.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="../css/styles.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="content-in-row">
+          <a class="link" href="../index.html"
+            ><img src="../images/icons/logo.svg" alt=""
+          /></a>
+          <ul class="list nav">
+            <li class="list-item">
+              <button class="button content-in-row" type="button">
+                <svg class="icon">
+                  <use href="./images/sprite.svg#icon-search"></use>
+                </svg>
+                Поиск
+              </button>
+            </li>
+            <li class="list-item">
+              <a class="link upper" href="tel:84964290900">8 496 429 09 00</a>
+            </li>
+            <li class="list-item">
+              <button class="button upper bold" type="button">
+                Оставить заявку
+              </button>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </header>
-  <main>
-    <section class="navigation">
-      <h2 class="page-title visually-hidden">Услуги</h2>
-      <ul class="list">
-        <li class="features-item">
-          <a class="link" href="">Наружная реклама</a>
-        </li>
-        <li class="features-item">
-          <a class="link" href="">Широкоформатная печать</a>
-        </li>
-        <li class="features-item">
-          <a class="link" href="./polygraphy.html">Рекламная полиграфия</a>
-        </li>
-        <li class="features-item">
-          <a class="link" href="">Сувенирная продукция</a>
-        </li>
-        <li class="features-item">
-          <a class="link" href="">Внутрення реклама</a>
-        </li>
-        <li class="features-item">
-          <a class="link" href="">Гравировка и резка</a>
-        </li>
-        <li class="features-item">
-          <a class="link" href="">Брендирование транспорта</a>
-        </li>
-      </ul>
-    </section>
+    </header>
+    <main>
+      <section class="navigation">
+        <h2 class="page-title visually-hidden">Услуги</h2>
+        <ul class="list">
+          <li class="features-item">
+            <a class="link" href="">Наружная реклама</a>
+          </li>
+          <li class="features-item">
+            <a class="link" href="">Широкоформатная печать</a>
+          </li>
+          <li class="features-item">
+            <a class="link" href="./polygraphy.html">Рекламная полиграфия</a>
+          </li>
+          <li class="features-item">
+            <a class="link" href="">Сувенирная продукция</a>
+          </li>
+          <li class="features-item">
+            <a class="link" href="">Внутрення реклама</a>
+          </li>
+          <li class="features-item">
+            <a class="link" href="">Гравировка и резка</a>
+          </li>
+          <li class="features-item">
+            <a class="link" href="">Брендирование транспорта</a>
+          </li>
+        </ul>
+      </section>
 
-    <section class="hero-catalogs">
-      <h1 class="page-title">Листовки и флаеры</h1>
-      <p>Листовка или флаер - это эффективный инструмент для развития бизнеса. Яркий дизайн и качественная печать привлекут
-      внимание потребителя.</p>
-      <img src="../images/flyers/flyers-hero.jpg" width="1400" height="675" alt="">
-    </section>
-    <section>
-      <h2 class="section-title">Виды листовок</h2>
-      <p>ММы стараемся быть ближе к своим клиентам и поэтому производим не только стандартные размеры листовок и флаеров, но и
-      любого другого необходимого вам формата. Кроме этого мы можем предложить вам широчайший выбор качественной дизайнерской
-      бумаги и картона.</p>
+      <section class="hero-catalogs">
+        <h1 class="page-title">Листовки и флаеры</h1>
+        <p>
+          Листовка или флаер - это эффективный инструмент для развития бизнеса.
+          Яркий дизайн и качественная печать привлекут внимание потребителя.
+        </p>
+        <img
+          src="../images/flyers/flyers-hero.jpg"
+          width="1400"
+          height="675"
+          alt=""
+        />
+      </section>
+      <section>
+        <h2 class="section__title">Виды листовок</h2>
+        <p>
+          ММы стараемся быть ближе к своим клиентам и поэтому производим не
+          только стандартные размеры листовок и флаеров, но и любого другого
+          необходимого вам формата. Кроме этого мы можем предложить вам
+          широчайший выбор качественной дизайнерской бумаги и картона.
+        </p>
         <ul class="list">
           <li>
             <div class="kind kind-a4">
@@ -93,26 +114,31 @@
             <p class="upper">A6 | 148 x 105 мм</p>
           </li>
         </ul>
-    </section>
-    <section>
-      <h2 class="section-title">Узнайте стоимость</h2>
-    </section>
-    <section>
-      <h2 class="section-title">Дополнительные услуги</h2>
-    </section>
-    <section class="works">
-      <h2 class="section-title">Наши работы</h2>
-      <ul class="list">
-        <li>
-          <a class="link" href="">
-            <div>
-              <img src="../images/ourworks/img1.jpg" width="360" height="270" alt="">
-              <h3>Кафе Starbucks Coffee</h3>
-            </div>
-          </a>
-          <p class="upper">Вывеска объемная</p>
-        </li>
-        <!-- <li>
+      </section>
+      <section>
+        <h2 class="section__title">Узнайте стоимость</h2>
+      </section>
+      <section>
+        <h2 class="section__title">Дополнительные услуги</h2>
+      </section>
+      <section class="works">
+        <h2 class="section__title">Наши работы</h2>
+        <ul class="list">
+          <li>
+            <a class="link" href="">
+              <div>
+                <img
+                  src="../images/ourworks/img1.jpg"
+                  width="360"
+                  height="270"
+                  alt=""
+                />
+                <h3>Кафе Starbucks Coffee</h3>
+              </div>
+            </a>
+            <p class="upper">Вывеска объемная</p>
+          </li>
+          <!-- <li>
           <a class="link" href="">
             <div>
               <img src="../images/ourworks/img2.jpg" width="570" height="570" alt="">
@@ -121,16 +147,21 @@
           </a>
           <p>Наружная реклама</p>
         </li> -->
-        <li>
-          <a class="link" href="">
-            <div>
-              <img src="../images/ourworks/img3.jpg" width="360" height="360" alt="">
-              <h3>Сеть ресторанов Emosi</h3>
-            </div>
-          </a>
-          <p>Вывеска объемная</p>
-        </li>
-        <!-- <li>
+          <li>
+            <a class="link" href="">
+              <div>
+                <img
+                  src="../images/ourworks/img3.jpg"
+                  width="360"
+                  height="360"
+                  alt=""
+                />
+                <h3>Сеть ресторанов Emosi</h3>
+              </div>
+            </a>
+            <p>Вывеска объемная</p>
+          </li>
+          <!-- <li>
           <a class="link" href="">
             <div>
               <img src="../images/ourworks/img4.jpg" width="570" height="370" alt="">
@@ -139,84 +170,124 @@
           </a>
           <p>Фирменный стиль</p>
         </li> -->
-        <li>
-          <a class="link" href="">
-            <div>
-              <img src="../images/ourworks/img6.jpg" width="360" height="270" alt="">
-              <h3>Релакс студия Flora</h3>
+          <li>
+            <a class="link" href="">
+              <div>
+                <img
+                  src="../images/ourworks/img6.jpg"
+                  width="360"
+                  height="270"
+                  alt=""
+                />
+                <h3>Релакс студия Flora</h3>
+              </div>
+            </a>
+            <p>Фирменный стиль</p>
+          </li>
+          <li>
+            <a class="link" href="">
+              <div>
+                <img
+                  src="../images/ourworks/img5.jpg"
+                  width="370"
+                  height="370"
+                  alt=""
+                />
+                <h3>Магазин Levi's</h3>
+              </div>
+            </a>
+            <p>Входная группа и вывеска</p>
+          </li>
+        </ul>
+        <button class="button" type="button">Все работы</button>
+      </section>
+      <section class="application">
+        <h2 class="section__title">Заявка</h2>
+        <p>
+          Оставьте заявку, наш менеджер обработает её и свяжется с вами в
+          ближайшее время
+        </p>
+        <form action=""></form>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer-dark section--gray">
+        <div class="container">
+          <div class="top-footer">
+            <div class="grid__item">
+              <a class="link footer-title" href=""
+                ><span class="accent" lang="en">Promomix –</span> рекламное
+                агентство полного цикла</a
+              >
+              <button class="button upper" type="button">
+                Оставить заявку
+              </button>
             </div>
-          </a>
-          <p>Фирменный стиль</p>
-        </li>
-        <li>
-          <a class="link" href="">
-            <div>
-              <img src="../images/ourworks/img5.jpg" width="370" height="370" alt="">
-              <h3>Магазин Levi's</h3>
-            </div>
-          </a>
-          <p>Входная группа и вывеска</p>
-        </li>
-      </ul>
-      <button class="button" type="button">Все работы</button>
-    </section>
-    <section class="application">
-      <h2 class="section-title">Заявка</h2>
-      <p>Оставьте заявку, наш менеджер обработает её и свяжется с вами
-      в ближайшее время</p>
-      <form action=""></form>
-    </section>
-  </main>
-  <footer class="footer">
-    <div class="footer-dark gray-section">
-      <div class="container">
-        <div class="top-footer">
-          <div class="flex-item">
-            <a class="link footer-title" href=""><span class="accent" lang="en">Promomix –</span> рекламное агентство
-              полного
-              цикла</a>
-            <button class="button upper" type="button">Оставить заявку</button>
-          </div>
-          <div class="flex-item">
-            <div class="flex-list">
-              <nav class="flex-item">
-                <ul class="list main-nav">
-                  <li class="item"><a class="link" href="../html/about.html">О компании</a></li>
-                  <li class="item"><a class="link" href="../html/features.html">Услуги</a></li>
-                  <li class="item"><a class="link" href="../html/works.html">Наши работы</a></li>
-                  <li class="item"><a class="link" href="../html/services.html">Сервис</a></li>
-                  <li class="item"><a class="link" href="../html/complex.html">Комплексные решения</a></li>
-                  <li class="item"><a class="link" href="../html/posts.html">Статьи и новости</a></li>
-                  <li class="item"><a class="link" href="../html/contacts.html">Контакты</a></li>
-                </ul>
-              </nav>
-              <div class="flex-item">
-                <p class="invitation">Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
-                <form class="footer-form">
-                  <input class="placeholder" type="email" placeholder="Ваш e-mail">
-                  <button type="submit">
-                    <!-- &#8594; -->
-                    <svg width="20" height="14">
-                      <use href="../images/sprite.svg#icon-arrow"></use>
-                    </svg>
-                  </button>
-                </form>
+            <div class="grid__item">
+              <div class="grid">
+                <nav class="grid__item">
+                  <ul class="list main-nav">
+                    <li class="item">
+                      <a class="link" href="../html/about.html">О компании</a>
+                    </li>
+                    <li class="item">
+                      <a class="link" href="../html/features.html">Услуги</a>
+                    </li>
+                    <li class="item">
+                      <a class="link" href="../html/works.html">Наши работы</a>
+                    </li>
+                    <li class="item">
+                      <a class="link" href="../html/services.html">Сервис</a>
+                    </li>
+                    <li class="item">
+                      <a class="link" href="../html/complex.html"
+                        >Комплексные решения</a
+                      >
+                    </li>
+                    <li class="item">
+                      <a class="link" href="../html/posts.html"
+                        >Статьи и новости</a
+                      >
+                    </li>
+                    <li class="item">
+                      <a class="link" href="../html/contacts.html">Контакты</a>
+                    </li>
+                  </ul>
+                </nav>
+                <div class="grid__item">
+                  <p class="invitation">
+                    Чтобы быть в курсе всех акций и новых событий, подпишитесь
+                    на нашу рассылку.
+                  </p>
+                  <form class="footer-form">
+                    <input
+                      class="placeholder"
+                      type="email"
+                      placeholder="Ваш e-mail"
+                    />
+                    <button type="submit">
+                      <!-- &#8594; -->
+                      <svg width="20" height="14">
+                        <use href="../images/sprite.svg#icon-arrow"></use>
+                      </svg>
+                    </button>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="container">
-      <div class="low-footer">
-        <p>&copy; 2011-2020 Promomix</p>
-        <ul class="list social-list">
-          <li class="social-item"><a class="link" href="">Facebook</a></li>
-          <li class="social-item"><a class="link" href="">Vkontakte</a></li>
-          <li class="social-item"><a class="link" href="">Instagram</a></li>
-        </ul>
+      <div class="container">
+        <div class="low-footer">
+          <p>&copy; 2011-2020 Promomix</p>
+          <ul class="list social-list">
+            <li class="social-item"><a class="link" href="">Facebook</a></li>
+            <li class="social-item"><a class="link" href="">Vkontakte</a></li>
+            <li class="social-item"><a class="link" href="">Instagram</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
