--- a/html/stores.html
+++ b/html/stores.html
@@ -1,40 +1,59 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Для магазинов</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.2.0/modern-normalize.min.css">
-  <link rel="stylesheet" href="../css/styles.css">
-</head>
-<body>
-  <header class="header">
-    <div class="container">
-      <div class="content-in-row">
-        <a class="link" href="../index.html"><img src="../images/icons/logo.svg" alt=""></a>
-        <ul class="list nav">
-          <li class="list-item ">
-            <button class="button content-in-row" type="button">
-              <svg class="icon">
-                <use href="./images/sprite.svg#icon-search"></use>
-              </svg>
-              Поиск
-            </button>
-          </li>
-          <li class="list-item"><a class="link upper" href="tel:84964290900">8 496 429 09 00</a></li>
-          <li class="list-item"><button class="button upper bold" type="button">Оставить заявку</button></li>
-        </ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Для магазинов</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.2.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="../css/styles.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="content-in-row">
+          <a class="link" href="../index.html"
+            ><img src="../images/icons/logo.svg" alt=""
+          /></a>
+          <ul class="list nav">
+            <li class="list-item">
+              <button class="button content-in-row" type="button">
+                <svg class="icon">
+                  <use href="./images/sprite.svg#icon-search"></use>
+                </svg>
+                Поиск
+              </button>
+            </li>
+            <li class="list-item">
+              <a class="link upper" href="tel:84964290900">8 496 429 09 00</a>
+            </li>
+            <li class="list-item">
+              <button class="button upper bold" type="button">
+                Оставить заявку
+              </button>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </header>
-  <main>
-    <section class="hero-stores">
-      <h1 class="page-title">Для магазинов</h1>
-      <p>Создаём уютную атмосферу внутри магазина, подчёркиваем нужные товарные категории, скрываем недостатки и задаём
-      положительный покупательский настрой.</p>
-      <img src="../images/stores/stores1.jpg" width="1400" height="675" alt="">
-      <!-- <ul class="list">
+    </header>
+    <main>
+      <section class="hero-stores">
+        <h1 class="page-title">Для магазинов</h1>
+        <p>
+          Создаём уютную атмосферу внутри магазина, подчёркиваем нужные товарные
+          категории, скрываем недостатки и задаём положительный покупательский
+          настрой.
+        </p>
+        <img
+          src="../images/stores/stores1.jpg"
+          width="1400"
+          height="675"
+          alt=""
+        />
+        <!-- <ul class="list">
         <li class="benefits-item">
           <span class="accent benefits-number">18+</span>
           <p>лет опыта на рекламном рынке</p>
@@ -55,106 +74,173 @@
             оборудования</p>
         </li>
       </ul> -->
-    </section>
-    <section>
-      <h2 class="section-title"><span class="accent">Готовое решение</span> для повышения продаж</h2>
-      <p>Сейчас, торговой точке уже недостаточно иметь только удобное месторасположение и вывеску. Необходимо создать приятную
-      атмосферу внутри магазина и разработать красивый дизайн. Дизайн интерьера, атмосфера внутри магазина, правильное
-      расположение оборудования, POS-материалы и оформление витрин – всё это может значительно повысить продажи.</p>
-      <p>Для оформления товарных отделов часто используют различные виды рекламной продукции и POS-материалы, что позволяет
-      произвести грамотную расстановку товарных групп, так чтобы потребитель смог обойти торговое пространство целиком.
-      Наиболее часто используют следующие POS-материалы: ценники, шелфтокеры, воблеры, буклеты, листовки, плакаты, флаеры и
-      т.д.</p>
-    </section>
-    <section>
-      <h2 class="section-title visually-hidden">Пирмеры готовых решений для магазина</h2>
-      <h3>Фасад</h3>
-      <img src="../images/stores/stores2.jpg" width="570" height="570" alt="">
-      <h3>Торговый зал</h3>
-      <img src="../images/stores/stores3.jpg" width="570" height="570" alt="">
-    </section>
-    <section>
-      <h2 class="section-title"><span class="accent">Преимущества</span> комплексного подхода</h2>
-      <ul class="list">
-        <li class="history-item">
-          <span class="accent history-number">01</span>
-          <h3>Рост покупателей торговой сети</h3>
-          <p>Постоянный поток покупателей с близлежащих и отдаленных от магазина территорий.</p>
-        </li>
-        <li class="history-item">
-          <span class="accent history-number">02</span>
-          <h3>Рост продаж и увеличение прибыли</h3>
-          <p>Высокий спрос покупателей прямо пропорционален росту прибыли магазина.</p>
-        </li>
-        <li class="history-item">
-          <span class="accent history-number">03</span>
-          <h3>Повышение доверия к ритейл бренду</h3>
-          <p>Потребитель запомнит вас среди многообразия других торговых точек и доверится вам.</p>
-        </li>
-        <li class="history-item">
-          <span class="accent history-number">04</span>
-          <h3>Укрепление имиджа торговой компании</h3>
-          <p>Создание единого и узнаваемого образа компании укрепит ваши позиции на рынке.</p>
-        </li>
-      </ul>
-    </section>
-    <section class="application">
-      <h2 class="section-title">Заявка</h2>
-      <p>Оставьте заявку, наш менеджер обработает её и свяжется с вами
-      в ближайшее время</p>
-      <form action=""></form>
-    </section>
-  </main>
-  <footer class="footer">
-    <div class="footer-dark gray-section">
-      <div class="container">
-        <div class="top-footer">
-          <div class="flex-item">
-            <a class="link footer-title" href=""><span class="accent" lang="en">Promomix –</span> рекламное агентство
-              полного
-              цикла</a>
-            <button class="button upper" type="button">Оставить заявку</button>
-          </div>
-          <div class="flex-item">
-            <div class="flex-list">
-              <nav class="flex-item">
-                <ul class="list main-nav">
-                  <li class="item"><a class="link" href="../html/about.html">О компании</a></li>
-                  <li class="item"><a class="link" href="../html/features.html">Услуги</a></li>
-                  <li class="item"><a class="link" href="../html/works.html">Наши работы</a></li>
-                  <li class="item"><a class="link" href="../html/services.html">Сервис</a></li>
-                  <li class="item"><a class="link" href="../html/complex.html">Комплексные решения</a></li>
-                  <li class="item"><a class="link" href="../html/posts.html">Статьи и новости</a></li>
-                  <li class="item"><a class="link" href="../html/contacts.html">Контакты</a></li>
-                </ul>
-              </nav>
-              <div class="flex-item">
-                <p class="invitation">Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
-                <form class="footer-form">
-                  <input class="placeholder" type="email" placeholder="Ваш e-mail">
-                  <button type="submit">
-                    <!-- &#8594; -->
-                    <svg width="20" height="14">
-                      <use href="../images/sprite.svg#icon-arrow"></use>
-                    </svg>
-                  </button>
-                </form>
+      </section>
+      <section>
+        <h2 class="section__title">
+          <span class="accent">Готовое решение</span> для повышения продаж
+        </h2>
+        <p>
+          Сейчас, торговой точке уже недостаточно иметь только удобное
+          месторасположение и вывеску. Необходимо создать приятную атмосферу
+          внутри магазина и разработать красивый дизайн. Дизайн интерьера,
+          атмосфера внутри магазина, правильное расположение оборудования,
+          POS-материалы и оформление витрин – всё это может значительно повысить
+          продажи.
+        </p>
+        <p>
+          Для оформления товарных отделов часто используют различные виды
+          рекламной продукции и POS-материалы, что позволяет произвести
+          грамотную расстановку товарных групп, так чтобы потребитель смог
+          обойти торговое пространство целиком. Наиболее часто используют
+          следующие POS-материалы: ценники, шелфтокеры, воблеры, буклеты,
+          листовки, плакаты, флаеры и т.д.
+        </p>
+      </section>
+      <section>
+        <h2 class="section__title visually-hidden">
+          Пирмеры готовых решений для магазина
+        </h2>
+        <h3>Фасад</h3>
+        <img
+          src="../images/stores/stores2.jpg"
+          width="570"
+          height="570"
+          alt=""
+        />
+        <h3>Торговый зал</h3>
+        <img
+          src="../images/stores/stores3.jpg"
+          width="570"
+          height="570"
+          alt=""
+        />
+      </section>
+      <section>
+        <h2 class="section__title">
+          <span class="accent">Преимущества</span> комплексного подхода
+        </h2>
+        <ul class="list">
+          <li class="history-item">
+            <span class="accent history-number">01</span>
+            <h3>Рост покупателей торговой сети</h3>
+            <p>
+              Постоянный поток покупателей с близлежащих и отдаленных от
+              магазина территорий.
+            </p>
+          </li>
+          <li class="history-item">
+            <span class="accent history-number">02</span>
+            <h3>Рост продаж и увеличение прибыли</h3>
+            <p>
+              Высокий спрос покупателей прямо пропорционален росту прибыли
+              магазина.
+            </p>
+          </li>
+          <li class="history-item">
+            <span class="accent history-number">03</span>
+            <h3>Повышение доверия к ритейл бренду</h3>
+            <p>
+              Потребитель запомнит вас среди многообразия других торговых точек
+              и доверится вам.
+            </p>
+          </li>
+          <li class="history-item">
+            <span class="accent history-number">04</span>
+            <h3>Укрепление имиджа торговой компании</h3>
+            <p>
+              Создание единого и узнаваемого образа компании укрепит ваши
+              позиции на рынке.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="application">
+        <h2 class="section__title">Заявка</h2>
+        <p>
+          Оставьте заявку, наш менеджер обработает её и свяжется с вами в
+          ближайшее время
+        </p>
+        <form action=""></form>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer-dark section--gray">
+        <div class="container">
+          <div class="top-footer">
+            <div class="grid__item">
+              <a class="link footer-title" href=""
+                ><span class="accent" lang="en">Promomix –</span> рекламное
+                агентство полного цикла</a
+              >
+              <button class="button upper" type="button">
+                Оставить заявку
+              </button>
+            </div>
+            <div class="grid__item">
+              <div class="grid">
+                <nav class="grid__item">
+                  <ul class="list main-nav">
+                    <li class="item">
+                      <a class="link" href="../html/about.html">О компании</a>
+                    </li>
+                    <li class="item">
+                      <a class="link" href="../html/features.html">Услуги</a>
+                    </li>
+                    <li class="item">
+                      <a class="link" href="../html/works.html">Наши работы</a>
+                    </li>
+                    <li class="item">
+                      <a class="link" href="../html/services.html">Сервис</a>
+                    </li>
+                    <li class="item">
+                      <a class="link" href="../html/complex.html"
+                        >Комплексные решения</a
+                      >
+                    </li>
+                    <li class="item">
+                      <a class="link" href="../html/posts.html"
+                        >Статьи и новости</a
+                      >
+                    </li>
+                    <li class="item">
+                      <a class="link" href="../html/contacts.html">Контакты</a>
+                    </li>
+                  </ul>
+                </nav>
+                <div class="grid__item">
+                  <p class="invitation">
+                    Чтобы быть в курсе всех акций и новых событий, подпишитесь
+                    на нашу рассылку.
+                  </p>
+                  <form class="footer-form">
+                    <input
+                      class="placeholder"
+                      type="email"
+                      placeholder="Ваш e-mail"
+                    />
+                    <button type="submit">
+                      <!-- &#8594; -->
+                      <svg width="20" height="14">
+                        <use href="../images/sprite.svg#icon-arrow"></use>
+                      </svg>
+                    </button>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="container">
-      <div class="low-footer">
-        <p>&copy; 2011-2020 Promomix</p>
-        <ul class="list social-list">
-          <li class="social-item"><a class="link" href="">Facebook</a></li>
-          <li class="social-item"><a class="link" href="">Vkontakte</a></li>
-          <li class="social-item"><a class="link" href="">Instagram</a></li>
-        </ul>
+      <div class="container">
+        <div class="low-footer">
+          <p>&copy; 2011-2020 Promomix</p>
+          <ul class="list social-list">
+            <li class="social-item"><a class="link" href="">Facebook</a></li>
+            <li class="social-item"><a class="link" href="">Vkontakte</a></li>
+            <li class="social-item"><a class="link" href="">Instagram</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
